   * Changed: Increased the pango cairo dependency to version 1.24.4.
   * Fixed a display artifact (halos not cleared) when WML moves a unit.
   * Improved the display of vision costs in the unit help.
   * Fixed wmllint, wmlscope and wmlindent not working correctly on Windows if a
     command line argument ends with a backslash
   * Fixed: Compilation with CLang 3.2 and libc++.

Version 1.11.1:
 * AI:
   * New AI: Experimental AI
     * Improved recruitment, castle and village management over current default AI
 * Campaigns:
   * Dead Water:
     * Removed duplicated loyalty overlay (that now is in core), and used
       {IS_LOYAL} macro
     * Stunned units are now marked with a status icon
   * Delfador's Memoirs
     * Add dummy side to cutscene to avoid crash at end of story part
       (bug #20208)
   * Eastern Invasion:
     * New set of portraits
   * Legend of Wesmere:
     * Scenario 02: Replaced the moveto events for checking the
       dwarvish borders with enter_hex events
     * Scenario 08: Add dummy side to cutscene to avoid crash at end of story
       part (bug #20208)
   * The Rise of Wesnoth:
     * Fix bug #16772: AI won't attack
   * Under the Burning Suns:
     * Keep a spawned unit from disappearing on reload in scenario 6b
     * Stunned units are now marked with a status icon
     * Fix bug #19303: dwarf sometimes spawns in cave wall
 * Graphics:
   * New portraits: Tentacle of the Deep
   * Updated brown lich alternative portrait
   * Fixed glitches caused by larger-than-hex standing units with certain frame
     image effects when image= is not explicitly specified (bug #20099)
   * Fixed standing unit animation glitches caused by [move_unit_fake] on
     adjacent locations (bug #20098)
   * The special ellipses for leader and hero units now support team coloring.
 * Language and i18n:
   * New translation: Scottish Gaelic
   * Updated translations: British English, Chinese (Traditional), Croatian,