@@ -110,6 +110,7 @@ Version 1.11.1+svn:
    * Fixed wmllint, wmlscope and wmlindent not working correctly on Windows if a
      command line argument ends with a backslash
    * Fixed: Compilation with CLang 3.2 and libc++.
+   * Added: Autorevision based revision numbers in CMake.
 
 Version 1.11.1:
  * AI:
